--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1= title
+  h1.col-md-2.col-md-offset-5= title
   div.contact-info.col-md-2.col-md-offset-5
     div.content-row
       span vk:&nbsp
