--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html
     //link(rel="stylesheet" href="/css/bootstrap-theme.min.css")
   //  script(src="/js/bootstrap.min.js")
 body
+    .sidebar "Всем привет"
     .container.content
       block content
