--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,7 @@
-h1 {
-    text-rendering: optimizeLegibility;
+.sidebar
+{
     text-align: center;
-    line-height: 1.1em;
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 50px;
-    -webkit-font-smoothing: antialiased;
-}
-
-.contact-info {
-    width: 25%;
+    padding: 2rem 1rem;
+    color: rgba(255,255,255,.5);
+    background-color: #440e68;
 }
